# auth-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
auth_service/: settings.py  urls.py
